@@ -1,6 +1,7 @@
 Changes
 CONCEPT
 examples/ex1.pl
+examples/ex2.pl
 HTML.pm
 inc/Module/Install.pm
 inc/Module/Install/AuthorRequires.pm
